@@ -1,3 +1,10 @@
+2003-01-15  Theodore Ts'o  <tytso@mit.edu>
+
+	* pw_phonemes.c (pw_phonemes): Fix bug in how we call 
+		pw_random_number() so that we generate passwords that
+		start with vowels, and insert numbers from 0-9, not just
+		0-8.  (Oops!)  Addresses Debian bug #176688.
+
 2002-07-16  Theodore Ts'o  <tytso@mit.edu>
 
 	* Makefile.in (install): Create the directory using $mandir, and
